icm-macros/testing/pack/errors/FunctionInArray.sol
pragma solidity ^0.8.30;

// #[pack()]
struct HasFunctionArray {
    function() external[] handlers;
}